plugins {
    id 'java'
<<<<<<< HEAD
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
=======
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
>>>>>>> BE
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
<<<<<<< HEAD
sourceCompatibility = '17'

=======

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// ✅ 使用正確的 HTTPS 倉庫
>>>>>>> BE
repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
<<<<<<< HEAD
    implementation 'org.postgresql:postgresql'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'org.projectlombok:lombok'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
=======
    runtimeOnly 'org.postgresql:postgresql'

    // ✅ Swagger UI for Spring Boot 3.x
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
>>>>>>> BE
    useJUnitPlatform()
}
